--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/icons/icomoon/style.css">
   <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Twitter</title>
+  <link rel="shortcut icon" href="assets/icons/favicon.ico">
 </head>
 
 <body>
